implements "Plugin Repo" icon

--- a/Settings-Icons.css
+++ b/Settings-Icons.css
@@ -111,7 +111,7 @@
   background-image: url(https://randomfly1.github.io/Settings-Icons/icons/betterdiscord/themes.svg);
 }
 [aria-label=USER_SETTINGS] .sidebar-CFHs9e [aria-controls=pluginrepo-tab].item-PXvHYJ:before {
-  background-image: url();
+  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/betterdiscord/plugin-repo.svg);
 }
 [aria-label=USER_SETTINGS] .sidebar-CFHs9e [aria-controls=themerepo-tab].item-PXvHYJ:before {
   background-image: url(https://randomfly1.github.io/Settings-Icons/icons/betterdiscord/theme-repo.svg);
